tests/neg/quote-run-in-macro-2/quoted_1.scala
import scala.quoted._

import dotty.tools.dotc.quoted.Toolbox._

object Macros {
  inline def foo(i: => Int): Int = ~{
    val y: Int = ('(i)).run
    y.toExpr
  }
}
